[package]
name = "termcraft"
version = "13.0.0"
edition = "2024"
description = "A voxel world in your terminal 🏔️"
license = "MIT"

[dependencies]
crossterm = "0.28"
noise = "0.9"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
bincode = "1"
rodio = "0.19"
tokio = { version = "1", features = ["full"] }
whoami = "1"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
